--- a/xebialabs/configuration.yaml
+++ b/xebialabs/configuration.yaml
@@ -1,7 +1,7 @@
 apiVersion: xl-deploy/v1
 kind: Environments
 spec:
-- directory: Dev
+- directory: Prod
   children:
   - directory: AsCode
     children:
@@ -10,9 +10,9 @@ spec:
       entries:
         TITLE: devops
         logFilePath: /dev/null
-        logRootLevel: DEBUG
+        logRootLevel: ERROR
         title: devops
-        logLevel: DEBUG
+        logLevel: ERROR
         timeout: 30
         smoke.test.url: http://deployit.vm:13080/petclinic/index.jsp
         tests2.ExecutedHttpRequestTest.url: '{{smoke.test.url}}'      
@@ -25,14 +25,14 @@ spec:
         tomcat.DataSource.context: petclinic
       encryptedEntries:
         tomcat.DataSource.password: passwor
-  - name: Tomcat-Dev-AsCode
+  - name: Tomcat-Prod-AsCode
     type: udm.Environment
     members:
-    - ~Infrastructure/AsCode/host-vm/tomcat/tomcat.vh
-    - ~Infrastructure/AsCode/host-vm/sql-db
-    - ~Infrastructure/AsCode/host-vm/tomcat
-    - ~Infrastructure/AsCode/host-vm/testRunner
-    - ~Infrastructure/AsCode/host-vm
+    - ~Infrastructure/Prod/host-vm/tomcat/tomcat.vh
+    - ~Infrastructure/Prod/host-vm/sql-db
+    - ~Infrastructure/Prod/host-vm/tomcat
+    - ~Infrastructure/Prod/host-vm/testRunner
+    - ~Infrastructure/Prod/host-vm
     dictionaries:
-    - ~Environments/Dev/AsCode/PetClinic Dictionary
-    - ~Environments/Dev/AsCode/PetClinic DB Dictionary
+    - ~Environments/Prod/AsCode/PetClinic Dictionary
+    - ~Environments/Prod/AsCode/PetClinic DB Dictionary
