--- a/xebialabs/deployment.yaml
+++ b/xebialabs/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: xl-deploy/v1
 kind: Deployment
 spec:
-  package: !format "Applications/Java/PetPortal/%appversion%"
+  package: Applications/Java/PetPortal/1.0.3
   environment: Environments/Dev/Tomcat-Dev-AsCode
   #orchestrators:
   #  - parallel-by-deployment-group
